@startuml

  namespace edu.kit.scc.dem.tuhl {
    namespace assisstance {
      class edu.kit.scc.dem.tuhl.assistance.AssistanceController {
          + AssistanceController()
          + help()
          + setPseudonym()
          + setSetting()
      }

      class edu.kit.scc.dem.tuhl.assistance.AssistanceService {
          + AssistanceService()
          + getHelp()
          + getUserByPseudonym()
          + getCurrentPseudonym()
      }

      interface edu.kit.scc.dem.tuhl.assistance.IAssistanceService {
          {abstract} + getHelp()
          {abstract} + getUserByPseudonym()
          {abstract} + getCurrentPseudonym()
      }

      interface edu.kit.scc.dem.tuhl.assistance.IUser {
          {abstract} + addSetting()
          {abstract} + removeSetting()
          {abstract} + getName()
      }

      enum Setting {
        FILTER
        TABLE_VIEW
        THUMBNAILS
        values
      }

      class edu.kit.scc.dem.tuhl.assistance.User {
          - name : String
          - settings : List<Setting>
          + User()
          + addSetting()
          + removeSetting()
          + getName()
          # User()
      }

      interface edu.kit.scc.dem.tuhl.assistance.UserRepository {
      }
    }
  }


  edu.kit.scc.dem.tuhl.assistance.AssistanceController o-- edu.kit.scc.dem.tuhl.assistance.IAssistanceService : assistanceService
  edu.kit.scc.dem.tuhl.assistance.AssistanceService ..|> edu.kit.scc.dem.tuhl.assistance.IAssistanceService
  edu.kit.scc.dem.tuhl.assistance.AssistanceService o-- edu.kit.scc.dem.tuhl.assistance.IUser : currentUser
  edu.kit.scc.dem.tuhl.assistance.AssistanceService o-- edu.kit.scc.dem.tuhl.assistance.UserRepository : repo
  edu.kit.scc.dem.tuhl.assistance.User ..|> edu.kit.scc.dem.tuhl.assistance.IUser

@enduml
